crates/pgt_pretty_print/tests/snapshots/tests__select_with_alias_80.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/select_with_alias_80.sql
snapshot_kind: text
---
SELECT a AS x, b AS y, c FROM t;
