crates/pgt_pretty_print/tests/snapshots/tests__set_operation_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/set_operation_stmt_0_60.sql
snapshot_kind: text
---
SELECT
  id,
  name
FROM
  users
UNION
SELECT
  id,
  name
FROM
  employees;
