crates/pgt_pretty_print/tests/snapshots/tests__set_to_default_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/set_to_default_0_60.sql
snapshot_kind: text
---
UPDATE t SET a = DEFAULT;
