crates/pgt_pretty_print/tests/snapshots/tests__simple_select_80.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/simple_select_80.sql
snapshot_kind: text
---
SELECT a, b, c FROM t;
