crates/pgt_pretty_print/tests/snapshots/tests__sub_link_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/sub_link_0_60.sql
snapshot_kind: text
---
SELECT * FROM users WHERE EXISTS (SELECT 1 FROM orders);
