crates/pgt_pretty_print/tests/snapshots/tests__subscripting_ref_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
expression: formatted_sql
---
SELECT array_col[1] FROM table_name;
