crates/pgt_pretty_print/tests/snapshots/tests__table_func_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/table_func_0_60.sql
snapshot_kind: text
---
SELECT
  *
FROM
  JSON_TABLE('{"employees":[{"name":"John","age":30},{"name":"Jane","age":25}]}'::jsonb,
  '$.employees[*]'
  COLUMNS (
    name text PATH '$.name',
    age pg_catalog.int4 PATH '$.age'
  )) AS jt;
