crates/pgt_pretty_print/tests/snapshots/tests__table_like_clause_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/table_like_clause_0_60.sql
snapshot_kind: text
---
CREATE TABLE new_table (LIKE old_table INCLUDING ALL);
