crates/pgt_pretty_print/tests/snapshots/tests__transaction_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/transaction_stmt_0_60.sql
snapshot_kind: text
---
BEGIN;
